@@ -7,10 +7,20 @@ Features
   • Many different options to customize look and behavior
   • Open Source (https://github.com/afrmtbl/InstantView)
 
-Latest Update: 4.5.3
+Latest Update: 4.6.0
+  FEATURES
+  - Added a button to load more comments!
+  - Added an option to change the data source from the YouTube Data API to the Invidious API
+    - https://github.com/omarroth/invidious
+  - Added an option to change the FFT size for the visualizer
+
   FIXES
-  - Video information may fail to load (again!). This was due to new security features introduced in Chrome 76 causing network requests to fail
-  - Playlist browse button on top left can now be seen again when a playlist is loaded
+  - Fixed issue on the homepage where clicking on a video's thumbnail would not open in the popup
+  - Fixed issue where clicking close to a thumbnail icon (watch later, add to queue) would not open the video in the popup
+  - Fixed video information being requested twice
+
+  CHANGES
+  - Comments panel now notifies when comments are disabled on a video
 
 The full version history can be found on GitHub.
 
